use getfirst